# ibge-dengue-data-integration

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  app.py  dashboard.py  docker-compose.yml  pyproject.toml
ETL/: .env  extract.py  load.py  transform.py
src/: app.py  charts.py  load_app.py
src/pipeline/: extract.py  load.py  main.py  transform.py
